--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
             <div class="hero-text" data-aos="fade-right" data-aos-duration="1000">
                 <span class="hero-subtitle">Hello, I'm</span>
                 <h1 class="hero-title">Bommasani <span id="typed-text">Venkata Leela Sai</span></h1>
-                <p class="hero-description">Software Development | Artificial intelligence | Data Analytics Enthusiast</p>
+                <p class="hero-description">Software Development | Artificial intelligence | DevOps Engineer Enthusiast</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Contact Me</a>
                     <a href="https://drive.google.com/file/d/1V7FK1tbuMdSG5wlzKIehzoU_QF2hbjul/view?usp=drivesdk" class="btn btn-outline">Download Resume</a>
@@ -1581,20 +1581,9 @@
                         <span class="skill-percentage">95%</span>
                     </div>
                 </div>
-                <div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="skill-icon">
-                        <i class="fab fa-java"></i>
-                    </div>
-                    <h3 class="skill-title">Java</h3>
-                    <p>Experience in developing enterprise applications and Android development.</p>
-                    <div class="skill-bar-wrapper">
-                        <div class="skill-bar" data-width="80"></div>
-                        <span class="skill-percentage">80%</span>
-                    </div>
-                </div>
                 <div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
                     <div class="skill-icon">
-                        <i class="fas fa-code-branch"></i>
+                        <i class="fas fa-laptop-code"></i>
                     </div>
                     <h3 class="skill-title">HTML, CSS, JavaScript</h3>
                     <p>Creating responsive and interactive web applications with modern frameworks.</p>
@@ -1625,6 +1614,50 @@
                         <span class="skill-percentage">82%</span>
                     </div>
                 </div>
+                <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="skill-icon">
+                        <i class="fas fa-code-branch"></i>
+                    </div>
+                    <h3 class="skill-title">Git</h3>
+                    <p>Git for version control, ensuring efficient collaboration, code management, and streamlined development workflows.</p>
+                    <div class="skill-bar-wrapper">
+                        <div class="skill-bar" data-width="90"></div>
+                        <span class="skill-percentage">90%</span>
+                    </div>
+                </div>
+                <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="skill-icon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <h3 class="skill-title">CI/CD</h3>
+                    <p>CI/CD pipelines to automate code integration, testing, and deployment, ensuring faster and more reliable software delivery.</p>
+                    <div class="skill-bar-wrapper">
+                        <div class="skill-bar" data-width="90"></div>
+                        <span class="skill-percentage">90%</span>
+                    </div>
+                </div>
+                <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="skill-icon">
+                        <i class="fas fa-cloud"></i>
+                    </div>
+                    <h3 class="skill-title">AWS</h3>
+                    <p>Proficient in deploying, managing, and scaling applications on AWS cloud services.</p>
+                    <div class="skill-bar-wrapper">
+                        <div class="skill-bar" data-width="80"></div>
+                        <span class="skill-percentage">80%</span>
+                    </div>
+                </div>
+                <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="skill-icon">
+                        <i class="fab fa-docker"></i>
+                    </div>
+                    <h3 class="skill-title">Docker</h3>
+                    <p>Containerizing applications and managing environments using Docker.</p>
+                    <div class="skill-bar-wrapper">
+                        <div class="skill-bar" data-width="80"></div>
+                        <span class="skill-percentage">80%</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -1647,10 +1680,10 @@
                     <p class="cert-date">2024</p>
                 </div>
                 <div class="cert-card" data-aos="fade-up" data-aos-delay="300">
-                    <h3 class="cert-title">Data Structures & Algorithms</h3>
-                    <p class="cert-issuer">Self-Paced Learning</p>
-                    <p>In-depth study of advanced data structures and algorithm design techniques.</p>
-                    <p class="cert-date">2023</p>
+                    <h3 class="cert-title">DevOps Planning to Production</h3>
+                    <p class="cert-issuer">GeeksforGeeks</p>
+                    <p>Certified in DevOps practices with hands-on experience in CI/CD, containerization, and cloud-based deployment workflows.</p>
+                    <p class="cert-date">2025</p>
                 </div>
             </div>
         </div>
@@ -1667,12 +1700,12 @@
                         <span class="timeline-period">Present</span>
                         <h3 class="timeline-title">Open to Work</h3>
                         <p class="timeline-company">Actively Seeking Opportunities</p>
-                        <p>Looking for challenging roles in Software Development, Machine Learning, and Data Analytics where I can apply my skills and continue to grow as a professional.</p>
+                        <p>Looking for challenging roles in Software Development, DevOps, Web development, and Data Analytics where I can apply my skills and continue to grow as a professional.</p>
                         <p>Areas of interest include:</p>
                         <ul style="list-style-type: disc; margin-left: 20px; margin-top: 8px;">
                             <li>Software Engineering</li>
-                            <li>Machine Learning Engineering</li>
-                            <li>Data Science</li>
+                            <li>Web Development</li>
+                            <li>DevOps</li>
                             <li>AI Research</li>
                         </ul>
                     </div>
@@ -1827,7 +1860,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/LeelaSai82" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -1876,9 +1909,8 @@
             <div class="footer-bottom">
                 <p class="footer-copyright">© 2025 Bommasani Leela Sai. All Rights Reserved.</p>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/LeelaSai82" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/bommasanileelasai/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -1988,7 +2020,7 @@
             });
             
             // Typed Text Effect
-            const texts = ['Venkata Leela Sai', 'an Developer', 'an AI Enthusiast', 'a Problem Solver'];
+            const texts = ['Venkata Leela Sai', 'an Developer', 'an AI Enthusiast', 'a Problem Solver', 'DevOps Enthusiast'];
             let count = 0;
             let index = 0;
             let currentText = '';
