images and changes update

--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,14 @@
             <h2 class="section-title text-center" data-aos="fade-up">About Me</h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="https://images.pexels.com/photos/3861969/pexels-photo-3861969.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="About Me">
+                    <lottie-player
+                        src="https://assets10.lottiefiles.com/packages/lf20_0yfsb3a1.json"
+                        background="transparent"
+                        speed="1"
+                        style="width: 80%; height: 80%;"
+                        loop
+                        autoplay>
+                    </lottie-player>
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
                     <p>I am a Computer Science student with experience in Python, C++, SQL, Web Development (HTML, CSS, JavaScript), Machine Learning, and Deep Learning. I enjoy tackling complex problems, optimizing software performance, and leveraging AI to drive meaningful solutions.</p>
@@ -1721,7 +1728,7 @@
             <div class="projects-grid">
                 <div class="project-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/2599244/pexels-photo-2599244.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Project Image">
+                        <img src="assets/image_project.jpg" alt="Project Image">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/LeelaSai82/Prompt-Guided-Image-Captioning-with-VGG16" target="_blank" class="project-link">
@@ -1746,7 +1753,7 @@
                 </div>
                 <div class="project-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/4488194/pexels-photo-4488194.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Project Image">
+                        <img src="https://ars.els-cdn.com/content/image/3-s2.0-B9780323852142000033-f12-01-9780323852142.jpg" alt="Project Image">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/LeelaSai82/Deep-Learning-approach-to-detect-the-sugarcane-leaf-disease-with-self-attention-layers" target="_blank" class="project-link">
@@ -1771,7 +1778,7 @@
                 </div>
                 <div class="project-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/2599244/pexels-photo-2599244.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Project Image">
+                        <img src="https://repository-images.githubusercontent.com/586504690/ec24c026-e728-4dbf-8a70-4d2b67cdcb59" alt="Project Image">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/LeelaSai82/Automatic-College-timetable-Generator" target="_blank" class="project-link">
@@ -1796,7 +1803,7 @@
                 </div>
                 <div class="project-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="project-image">
-                        <img src="https://images.pexels.com/photos/5668859/pexels-photo-5668859.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Project Image">
+                        <img src="assets/legal.jpg" alt="Project Image">
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://github.com/LeelaSai82/Legal-Domain-Classification-Using-Entity-Recognition" target="_blank" class="project-link">
@@ -2131,5 +2138,7 @@
             });
         });
     </script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
 </body>
 </html>
