about me updated

--- a/index.html
+++ b/index.html
@@ -1540,8 +1540,12 @@
                     </lottie-player>
                 </div>
                 <div class="about-text" data-aos="fade-left" data-aos-duration="1000">
-                    <p>I am a Computer Science student with experience in Python, C++, SQL, Web Development (HTML, CSS, JavaScript), Machine Learning, and Deep Learning. I enjoy tackling complex problems, optimizing software performance, and leveraging AI to drive meaningful solutions.</p>
-                    <p>My passion lies in creating efficient algorithms and developing applications that solve real-world problems. I am constantly learning and expanding my skillset to stay current with the latest technologies and industry best practices.</p>
+                    <p>I am a Computer Science student with hands-on experience in Python, C++, SQL, Web Development (HTML, CSS, JavaScript), Machine Learning, and Deep Learning. I enjoy solving complex problems, optimizing software performance, and leveraging AI to create meaningful, real-world solutions.</p>
+
+<p>Driven by a passion for innovation, I focus on building scalable applications. I am continuously expanding my skill set, staying up-to-date with emerging technologies, DevOps practices, and industry best standards to deliver impactful results.</p>
+
+<p>I am always eager to learn, grow, and contribute to projects that push the boundaries of technology.</p>
+
                     <div class="stats-grid">
                         <div class="stat-item">
                             <span class="stat-number" id="counter2">5+</span>
