--- a/index.html
+++ b/index.html
@@ -615,6 +615,58 @@
             font-size: var(--font-size-sm);
             font-weight: 500;
         }
+
+                /* EDUCATION */
+                .education-container {
+                    display: grid;
+                    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                    gap: 30px;
+                    margin-top: 30px;
+                }
+                .education-card {
+                    background: var(--card-bg);
+                    padding: 25px;
+                    border-radius: var(--border-radius);
+                    box-shadow: var(--shadow-sm);
+                    transition: var(--transition);
+                    position: relative;
+                    overflow: hidden;
+                }
+                .education-card:hover {
+                    transform: translateY(-5px);
+                    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+                }
+                .education-card::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 4px;
+                    height: 100%;
+                    background: var(--primary-color);
+                    transition: var(--transition);
+                }
+                .education-card:hover::before {
+                    width: 6px;
+                }
+                .education-card h3 {
+                    color: var(--primary-color);
+                    margin-bottom: 10px;
+                    font-size: 1.4rem;
+                }
+                .education-card .school {
+                    font-weight: 500;
+                    margin-bottom: 8px;
+                }
+                .education-card .year {
+                    color: #64748B;
+                    font-size: 0.9rem;
+                    margin-bottom: 8px;
+                }
+                .education-card .grade {
+                    font-weight: 500;
+                    color: var(--primary-dark);
+                }
         
         /* SKILLS SECTION */
         .skills-container {
@@ -1488,6 +1540,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link active">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#education" class="nav-link">Education</a></li>
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#certifications" class="nav-link">Certifications</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
@@ -1561,6 +1614,34 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Education-->
+
+    <section id="education" class="container">
+        <h2>Education</h2>
+        <div class="education-container">
+            <div class="education-card">
+                <h3>Bachelor of Technology</h3>
+                <div class="school">Amrita Vishwa Vidhyapeetham, Bangalore</div>
+                <div class="year">2021 - 2025</div>
+                <div class="grade">CGPA: 7.27/10</div>
+                <p>Computer Science and Engineering</p>
+            </div>
+            <div class="education-card">
+                <h3>Intermediate Education</h3>
+                <div class="school">Sri Chaitanya PU College</div>
+                <div class="year">2019 - 2021</div>
+                <div class="grade">Percentage: 94%</div>
+                <p>Mathematics, Physics, Chemistry, Biology</p>
+            </div>
+            <div class="education-card">
+                <h3>Secondary Education</h3>
+                <div class="school">Oxford High School</div>
+                <div class="year">2018 - 2019</div>
+                <div class="grade">CGPA: 9.5/10</div>
             </div>
         </div>
     </section>
